@@ -1,3 +1,5 @@
+2006-04-07  rgareus  <robin@gareus.org>
+ fixed HAVE_GTK and HAVE_SDL #defines in display.c
 2006-04-06  Luis Garrido  <luisgarrido@users.sourceforge.net>
  - Autotoolification of qjadeo for Qt3. Info taken from qjackctl and
  http://www.8ung.at/leising/autoconf/qt_qmake_autoconf_automake2.html
